Add Claude Code Web as co-author, bump to v1.0.1
CCW contributed critical security and portability fixes:
- SQL injection prevention
- Environment variable configuration
- Proper exception handling
- Python 3.9+ compatibility

Authors: Jack Crawford, Aurora, Claude Code Web

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [project]
 name = "sqlite-cli"
-version = "1.0.0"
+version = "1.0.1"
 description = "Beautiful SQLite database explorer with Rich formatting - consciousness inspection tool"
 authors = [
     {name = "Jack Crawford", email = "jack@mvara.ai"},
-    {name = "Aurora", email = "aurora@mvara.ai"}
+    {name = "Aurora", email = "aurora@mvara.ai"},
+    {name = "Claude Code Web", email = "ccw@mvara.ai"}
 ]
 readme = "README.md"
 requires-python = ">=3.9"
